# presentation_9_2

./: readme.md
example1/: CMakeLists.txt  package.xml
example1/src/: base.h  derived.h  main.cpp
example2/: CMakeLists.txt  package.xml
example2/src/: main.cpp
example3/: CMakeLists.txt  package.xml
example3/src/: main.cpp
example4/: CMakeLists.txt  package.xml
example4/src/: main.cpp
